@@ -1,8 +1,8 @@
 package co.edu.unimagdalena.finalproject_brasilia2.services;
 
-import co.edu.unimagdalena.finalproject_brasilia2.api.dto.SeatHoldDtos.*;
+import co.edu.unimagdalena.finalproject_brasilia2.api.dto.SeatHoldDtos.SeatHoldCreateRequest;
 import co.edu.unimagdalena.finalproject_brasilia2.domain.entities.*;
-import co.edu.unimagdalena.finalproject_brasilia2.domain.entities.enums.*;
+import co.edu.unimagdalena.finalproject_brasilia2.domain.entities.enums.SeatHoldStatus;
 import co.edu.unimagdalena.finalproject_brasilia2.domain.repositories.*;
 import co.edu.unimagdalena.finalproject_brasilia2.exceptions.NotFoundException;
 import co.edu.unimagdalena.finalproject_brasilia2.services.impl.SeatHoldServiceImpl;
@@ -15,10 +15,7 @@ import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.math.BigDecimal;
-import java.time.LocalDate;
 import java.time.OffsetDateTime;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 
@@ -51,81 +48,28 @@ class SeatHoldServiceImplTest {
     @InjectMocks
     private SeatHoldServiceImpl service;
 
-    // Helper methods
-    private Route createTestRoute() {
-        return Route.builder()
-                .id(1L)
-                .code("RUT-001")
-                .name("Bogotá-Medellín")
-                .origin("Bogotá")
-                .destination("Medellín")
-                .distanceKm(new BigDecimal("400.00"))
-                .durationMin(360)
-                .build();
-    }
-
-    private Bus createTestBus() {
-        return Bus.builder()
-                .id(1L)
-                .plate("ABC123")
-                .capacity(40)
-                .amenities(new HashSet<>())
-                .status(true)
-                .build();
-    }
-
-    private Trip createTestTrip(Route route, Bus bus) {
-        return Trip.builder()
-                .id(1L)
-                .route(route)
-                .bus(bus)
-                .date(LocalDate.now())
-                .departureTime(OffsetDateTime.now().plusHours(2))
-                .arrivalTime(OffsetDateTime.now().plusHours(8))
-                .status(TripStatus.SCHEDULED)
-                .build();
-    }
-
-    private User createTestUser() {
-        return User.builder()
-                .id(1L)
-                .name("Juan Pérez")
-                .email("juan@example.com")
-                .phone("3001234567")
-                .role(UserRole.PASSENGER)
-                .status(true)
-                .passwordHash("hash")
-                .createdAt(OffsetDateTime.now())
-                .build();
-    }
-
-    // ============= CREATE TESTS =============
-
     @Test
     void shouldCreateSeatHoldSuccessfully() {
         // Given
-        var route = createTestRoute();
-        var bus = createTestBus();
-        var trip = createTestTrip(route, bus);
-        var user = createTestUser();
+        var bus = Bus.builder().id(1L).plate("ABC123").build();
+        var trip = Trip.builder().id(10L).bus(bus).build();
+        var user = User.builder().id(5L).name("Juan Perez").build();
+        var seat = Seat.builder().id(1L).bus(bus).number("A1").build();
 
-        var seat = Seat.builder()
-                .id(1L)
-                .bus(bus)
-                .number("A1")
-                .seatType(SeatType.STANDARD)
-                .build();
+        var request = new SeatHoldCreateRequest(
+                10L,
+                "A1",
+                5L
+        );
 
-        var request = new SeatHoldCreateRequest(1L, "A1", 1L);
-
-        when(tripRepository.findById(1L)).thenReturn(Optional.of(trip));
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(seatRepository.findByBusIdAndNumber(bus.getId(), "A1")).thenReturn(Optional.of(seat));
+        when(tripRepository.findById(10L)).thenReturn(Optional.of(trip));
+        when(userRepository.findById(5L)).thenReturn(Optional.of(user));
+        when(seatRepository.findByBusIdAndNumber(1L, "A1")).thenReturn(Optional.of(seat));
         when(ticketRepository.findByTripAndSeatNumber(trip, "A1")).thenReturn(Optional.empty());
-        when(seatHoldRepository.findByTripId(1L)).thenReturn(List.of());
+        when(seatHoldRepository.findByTripId(10L)).thenReturn(List.of());
         when(seatHoldRepository.save(any(SeatHold.class))).thenAnswer(inv -> {
             SeatHold sh = inv.getArgument(0);
-            sh.setId(10L);
+            sh.setId(100L);
             return sh;
         });
 
@@ -133,25 +77,28 @@ class SeatHoldServiceImplTest {
         var response = service.create(request);
 
         // Then
-        assertThat(response.id()).isEqualTo(10L);
-        assertThat(response.tripId()).isEqualTo(1L);
-        assertThat(response.userId()).isEqualTo(1L);
+        assertThat(response.id()).isEqualTo(100L);
+        assertThat(response.tripId()).isEqualTo(10L);
         assertThat(response.seatNumber()).isEqualTo("A1");
+        assertThat(response.userId()).isEqualTo(5L);
         assertThat(response.status()).isEqualTo(SeatHoldStatus.HOLD);
-        assertThat(response.expiresAt()).isAfter(OffsetDateTime.now());
 
-        verify(tripRepository).findById(1L);
-        verify(userRepository).findById(1L);
-        verify(seatRepository).findByBusIdAndNumber(bus.getId(), "A1");
+        verify(tripRepository).findById(10L);
+        verify(userRepository).findById(5L);
+        verify(seatRepository).findByBusIdAndNumber(1L, "A1");
         verify(ticketRepository).findByTripAndSeatNumber(trip, "A1");
-        verify(seatHoldRepository).findByTripId(1L);
         verify(seatHoldRepository).save(any(SeatHold.class));
     }
 
     @Test
     void shouldThrowNotFoundExceptionWhenTripNotExists() {
         // Given
-        var request = new SeatHoldCreateRequest(99L, "A1", 1L);
+        var request = new SeatHoldCreateRequest(
+                99L,
+                "A1",
+                5L
+        );
+
         when(tripRepository.findById(99L)).thenReturn(Optional.empty());
 
         // When / Then
@@ -160,19 +107,22 @@ class SeatHoldServiceImplTest {
                 .hasMessageContaining("Trip 99 not found");
 
         verify(tripRepository).findById(99L);
-        verify(userRepository, never()).findById(any());
+        verify(seatHoldRepository, never()).save(any());
     }
 
     @Test
     void shouldThrowNotFoundExceptionWhenUserNotExists() {
         // Given
-        var route = createTestRoute();
-        var bus = createTestBus();
-        var trip = createTestTrip(route, bus);
+        var bus = Bus.builder().id(1L).build();
+        var trip = Trip.builder().id(10L).bus(bus).build();
 
-        var request = new SeatHoldCreateRequest(1L, "A1", 99L);
+        var request = new SeatHoldCreateRequest(
+                10L,
+                "A1",
+                99L
+        );
 
-        when(tripRepository.findById(1L)).thenReturn(Optional.of(trip));
+        when(tripRepository.findById(10L)).thenReturn(Optional.of(trip));
         when(userRepository.findById(99L)).thenReturn(Optional.empty());
 
         // When / Then
@@ -180,63 +130,54 @@ class SeatHoldServiceImplTest {
                 .isInstanceOf(NotFoundException.class)
                 .hasMessageContaining("User 99 not found");
 
-        verify(tripRepository).findById(1L);
         verify(userRepository).findById(99L);
+        verify(seatHoldRepository, never()).save(any());
     }
 
     @Test
     void shouldThrowNotFoundExceptionWhenSeatNotExistsInBus() {
         // Given
-        var route = createTestRoute();
-        var bus = createTestBus();
-        var trip = createTestTrip(route, bus);
-        var user = createTestUser();
+        var bus = Bus.builder().id(1L).plate("ABC123").build();
+        var trip = Trip.builder().id(10L).bus(bus).build();
+        var user = User.builder().id(5L).build();
 
-        var request = new SeatHoldCreateRequest(1L, "Z99", 1L);
+        var request = new SeatHoldCreateRequest(
+                10L,
+                "Z99",
+                5L
+        );
 
-        when(tripRepository.findById(1L)).thenReturn(Optional.of(trip));
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(seatRepository.findByBusIdAndNumber(bus.getId(), "Z99")).thenReturn(Optional.empty());
+        when(tripRepository.findById(10L)).thenReturn(Optional.of(trip));
+        when(userRepository.findById(5L)).thenReturn(Optional.of(user));
+        when(seatRepository.findByBusIdAndNumber(1L, "Z99")).thenReturn(Optional.empty());
 
         // When / Then
         assertThatThrownBy(() -> service.create(request))
                 .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("Seat Z99 not found in bus");
+                .hasMessageContaining("Seat Z99 not found in bus ABC123");
 
-        verify(tripRepository).findById(1L);
-        verify(userRepository).findById(1L);
-        verify(seatRepository).findByBusIdAndNumber(bus.getId(), "Z99");
-        verify(ticketRepository, never()).findByTripAndSeatNumber(any(), any());
+        verify(seatHoldRepository, never()).save(any());
     }
 
     @Test
     void shouldThrowIllegalStateExceptionWhenSeatAlreadySold() {
         // Given
-        var route = createTestRoute();
-        var bus = createTestBus();
-        var trip = createTestTrip(route, bus);
-        var user = createTestUser();
+        var bus = Bus.builder().id(1L).plate("ABC123").build();
+        var trip = Trip.builder().id(10L).bus(bus).build();
+        var user = User.builder().id(5L).build();
+        var seat = Seat.builder().id(1L).bus(bus).number("A1").build();
+        var ticket = Ticket.builder().id(1L).seatNumber("A1").build();
 
-        var seat = Seat.builder()
-                .id(1L)
-                .bus(bus)
-                .number("A1")
-                .seatType(SeatType.STANDARD)
-                .build();
+        var request = new SeatHoldCreateRequest(
+                10L,
+                "A1",
+                5L
+        );
 
-        var existingTicket = Ticket.builder()
-                .id(1L)
-                .trip(trip)
-                .seatNumber("A1")
-                .build();
-
-        var request = new SeatHoldCreateRequest(1L, "A1", 1L);
-
-        when(tripRepository.findById(1L)).thenReturn(Optional.of(trip));
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(seatRepository.findByBusIdAndNumber(bus.getId(), "A1")).thenReturn(Optional.of(seat));
-        when(ticketRepository.findByTripAndSeatNumber(trip, "A1"))
-                .thenReturn(Optional.of(existingTicket));
+        when(tripRepository.findById(10L)).thenReturn(Optional.of(trip));
+        when(userRepository.findById(5L)).thenReturn(Optional.of(user));
+        when(seatRepository.findByBusIdAndNumber(1L, "A1")).thenReturn(Optional.of(seat));
+        when(ticketRepository.findByTripAndSeatNumber(trip, "A1")).thenReturn(Optional.of(ticket));
 
         // When / Then
         assertThatThrownBy(() -> service.create(request))
@@ -247,36 +188,32 @@ class SeatHoldServiceImplTest {
     }
 
     @Test
-    void shouldThrowIllegalStateExceptionWhenSeatCurrentlyHeld() {
+    void shouldThrowIllegalStateExceptionWhenSeatIsCurrentlyHeld() {
         // Given
-        var route = createTestRoute();
-        var bus = createTestBus();
-        var trip = createTestTrip(route, bus);
-        var user = createTestUser();
-
-        var seat = Seat.builder()
-                .id(1L)
-                .bus(bus)
-                .number("A1")
-                .seatType(SeatType.STANDARD)
-                .build();
+        var bus = Bus.builder().id(1L).plate("ABC123").build();
+        var trip = Trip.builder().id(10L).bus(bus).build();
+        var user = User.builder().id(5L).build();
+        var seat = Seat.builder().id(1L).bus(bus).number("A1").build();
 
         var existingHold = SeatHold.builder()
-                .id(5L)
+                .id(50L)
                 .trip(trip)
-                .user(user)
                 .seatNumber("A1")
                 .status(SeatHoldStatus.HOLD)
                 .expiresAt(OffsetDateTime.now().plusMinutes(5))
                 .build();
 
-        var request = new SeatHoldCreateRequest(1L, "A1", 1L);
+        var request = new SeatHoldCreateRequest(
+                10L,
+                "A1",
+                5L
+        );
 
-        when(tripRepository.findById(1L)).thenReturn(Optional.of(trip));
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(seatRepository.findByBusIdAndNumber(bus.getId(), "A1")).thenReturn(Optional.of(seat));
+        when(tripRepository.findById(10L)).thenReturn(Optional.of(trip));
+        when(userRepository.findById(5L)).thenReturn(Optional.of(user));
+        when(seatRepository.findByBusIdAndNumber(1L, "A1")).thenReturn(Optional.of(seat));
         when(ticketRepository.findByTripAndSeatNumber(trip, "A1")).thenReturn(Optional.empty());
-        when(seatHoldRepository.findByTripId(1L)).thenReturn(List.of(existingHold));
+        when(seatHoldRepository.findByTripId(10L)).thenReturn(List.of(existingHold));
 
         // When / Then
         assertThatThrownBy(() -> service.create(request))
@@ -287,81 +224,30 @@ class SeatHoldServiceImplTest {
     }
 
     @Test
-    void shouldCreateSeatHoldWhenExistingHoldIsExpired() {
-        // Given
-        var route = createTestRoute();
-        var bus = createTestBus();
-        var trip = createTestTrip(route, bus);
-        var user = createTestUser();
-
-        var seat = Seat.builder()
-                .id(1L)
-                .bus(bus)
-                .number("A1")
-                .seatType(SeatType.STANDARD)
-                .build();
-
-        var expiredHold = SeatHold.builder()
-                .id(5L)
-                .trip(trip)
-                .user(user)
-                .seatNumber("A1")
-                .status(SeatHoldStatus.HOLD)
-                .expiresAt(OffsetDateTime.now().minusMinutes(5)) // Expired
-                .build();
-
-        var request = new SeatHoldCreateRequest(1L, "A1", 1L);
-
-        when(tripRepository.findById(1L)).thenReturn(Optional.of(trip));
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(seatRepository.findByBusIdAndNumber(bus.getId(), "A1")).thenReturn(Optional.of(seat));
-        when(ticketRepository.findByTripAndSeatNumber(trip, "A1")).thenReturn(Optional.empty());
-        when(seatHoldRepository.findByTripId(1L)).thenReturn(List.of(expiredHold));
-        when(seatHoldRepository.save(any(SeatHold.class))).thenAnswer(inv -> {
-            SeatHold sh = inv.getArgument(0);
-            sh.setId(10L);
-            return sh;
-        });
-
-        // When
-        var response = service.create(request);
-
-        // Then
-        assertThat(response.id()).isEqualTo(10L);
-        assertThat(response.seatNumber()).isEqualTo("A1");
-        assertThat(response.status()).isEqualTo(SeatHoldStatus.HOLD);
-
-        verify(seatHoldRepository).save(any(SeatHold.class));
-    }
-
-    // ============= GET BY ID TESTS =============
-
-    @Test
     void shouldGetSeatHoldById() {
         // Given
-        var trip = Trip.builder().id(1L).build();
-        var user = User.builder().id(1L).name("Juan").build();
+        var trip = Trip.builder().id(10L).build();
+        var user = User.builder().id(5L).build();
 
         var seatHold = SeatHold.builder()
-                .id(10L)
+                .id(100L)
                 .trip(trip)
-                .user(user)
                 .seatNumber("A1")
+                .user(user)
                 .status(SeatHoldStatus.HOLD)
                 .expiresAt(OffsetDateTime.now().plusMinutes(10))
                 .build();
 
-        when(seatHoldRepository.findById(10L)).thenReturn(Optional.of(seatHold));
+        when(seatHoldRepository.findById(100L)).thenReturn(Optional.of(seatHold));
 
         // When
-        var response = service.get(10L);
+        var response = service.get(100L);
 
         // Then
-        assertThat(response.id()).isEqualTo(10L);
+        assertThat(response.id()).isEqualTo(100L);
         assertThat(response.seatNumber()).isEqualTo("A1");
-        assertThat(response.status()).isEqualTo(SeatHoldStatus.HOLD);
 
-        verify(seatHoldRepository).findById(10L);
+        verify(seatHoldRepository).findById(100L);
     }
 
     @Test
@@ -377,43 +263,34 @@ class SeatHoldServiceImplTest {
         verify(seatHoldRepository).findById(99L);
     }
 
-    // ============= GET BY TRIP ID TESTS =============
-
     @Test
-    void shouldGetSeatHoldsByTripId() {
+    void shouldListSeatHoldsByTripId() {
         // Given
-        var trip = Trip.builder().id(1L).build();
-        var user = User.builder().id(1L).name("Juan").build();
+        var trip = Trip.builder().id(10L).build();
+        var user = User.builder().id(5L).build();
 
-        var hold1 = SeatHold.builder()
-                .id(10L).trip(trip).user(user).seatNumber("A1")
-                .status(SeatHoldStatus.HOLD)
-                .expiresAt(OffsetDateTime.now().plusMinutes(10))
-                .build();
+        var hold1 = SeatHold.builder().id(100L).trip(trip).user(user).seatNumber("A1").build();
+        var hold2 = SeatHold.builder().id(101L).trip(trip).user(user).seatNumber("A2").build();
 
-        var hold2 = SeatHold.builder()
-                .id(11L).trip(trip).user(user).seatNumber("A2")
-                .status(SeatHoldStatus.HOLD)
-                .expiresAt(OffsetDateTime.now().plusMinutes(10))
-                .build();
-
-        when(seatHoldRepository.findByTripId(1L)).thenReturn(List.of(hold1, hold2));
+        when(seatHoldRepository.findByTripId(10L))
+                .thenReturn(List.of(hold1, hold2));
 
         // When
-        var result = service.listByTripId(1L);
+        var result = service.listByTripId(10L);
 
         // Then
         assertThat(result).hasSize(2);
-        assertThat(result.get(0).tripId()).isEqualTo(1L);
-        assertThat(result.get(1).tripId()).isEqualTo(1L);
+        assertThat(result.getFirst().tripId()).isEqualTo(10L);
+        assertThat(result.get(1).tripId()).isEqualTo(10L);
 
-        verify(seatHoldRepository).findByTripId(1L);
+        verify(seatHoldRepository).findByTripId(10L);
     }
 
     @Test
     void shouldThrowNotFoundExceptionWhenNoHoldsForTrip() {
         // Given
-        when(seatHoldRepository.findByTripId(99L)).thenReturn(List.of());
+        when(seatHoldRepository.findByTripId(99L))
+                .thenReturn(List.of());
 
         // When / Then
         assertThatThrownBy(() -> service.listByTripId(99L))
@@ -423,127 +300,79 @@ class SeatHoldServiceImplTest {
         verify(seatHoldRepository).findByTripId(99L);
     }
 
-    // ============= GET BY USER ID TESTS =============
-
     @Test
-    void shouldGetSeatHoldsByUserId() {
+    void shouldListSeatHoldsByUserId() {
         // Given
-        var trip = Trip.builder().id(1L).build();
-        var user = User.builder().id(1L).name("Juan").build();
+        var trip = Trip.builder().id(10L).build();
+        var user = User.builder().id(5L).build();
 
-        var hold1 = SeatHold.builder()
-                .id(10L).trip(trip).user(user).seatNumber("A1")
-                .status(SeatHoldStatus.HOLD)
-                .expiresAt(OffsetDateTime.now().plusMinutes(10))
-                .build();
+        var hold = SeatHold.builder().id(100L).trip(trip).user(user).seatNumber("A1").build();
 
-        var hold2 = SeatHold.builder()
-                .id(11L).trip(trip).user(user).seatNumber("B1")
-                .status(SeatHoldStatus.HOLD)
-                .expiresAt(OffsetDateTime.now().plusMinutes(10))
-                .build();
-
-        when(seatHoldRepository.findByUserId(1L)).thenReturn(List.of(hold1, hold2));
+        when(seatHoldRepository.findByUserId(5L))
+                .thenReturn(List.of(hold));
 
         // When
-        var result = service.listByUserId(1L);
+        var result = service.listByUserId(5L);
 
         // Then
-        assertThat(result).hasSize(2);
-        assertThat(result.get(0).userId()).isEqualTo(1L);
-        assertThat(result.get(1).userId()).isEqualTo(1L);
+        assertThat(result).hasSize(1);
+        assertThat(result.getFirst().userId()).isEqualTo(5L);
 
-        verify(seatHoldRepository).findByUserId(1L);
+        verify(seatHoldRepository).findByUserId(5L);
     }
 
     @Test
-    void shouldThrowNotFoundExceptionWhenNoHoldsForUser() {
-        // Given
-        when(seatHoldRepository.findByUserId(99L)).thenReturn(List.of());
-
-        // When / Then
-        assertThatThrownBy(() -> service.listByUserId(99L))
-                .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("No holds found for user 99");
-
-        verify(seatHoldRepository).findByUserId(99L);
-    }
-
-    // ============= EXPIRE TESTS =============
-
-    @Test
-    void shouldExpireSeatHoldSuccessfully() {
+    void shouldExpireSeatHold() {
         // Given
         var seatHold = SeatHold.builder()
-                .id(10L)
-                .seatNumber("A1")
+                .id(100L)
                 .status(SeatHoldStatus.HOLD)
                 .expiresAt(OffsetDateTime.now().minusMinutes(1))
                 .build();
 
-        when(seatHoldRepository.findById(10L)).thenReturn(Optional.of(seatHold));
+        when(seatHoldRepository.findById(100L)).thenReturn(Optional.of(seatHold));
         when(seatHoldRepository.save(any(SeatHold.class))).thenAnswer(inv -> inv.getArgument(0));
 
         // When
-        service.expire(10L);
+        service.expire(100L);
 
         // Then
-        verify(seatHoldRepository).findById(10L);
-        verify(seatHoldRepository).save(argThat(hold ->
-                hold.getStatus() == SeatHoldStatus.EXPIRED
-        ));
-    }
-
-    @Test
-    void shouldThrowNotFoundExceptionWhenExpireNonExistentHold() {
-        // Given
-        when(seatHoldRepository.findById(99L)).thenReturn(Optional.empty());
-
-        // When / Then
-        assertThatThrownBy(() -> service.expire(99L))
-                .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("SeatHold 99 not found");
-
-        verify(seatHoldRepository).findById(99L);
-        verify(seatHoldRepository, never()).save(any());
+        verify(seatHoldRepository).findById(100L);
+        verify(seatHoldRepository).save(any(SeatHold.class));
     }
 
     @Test
     void shouldThrowIllegalStateExceptionWhenExpireNonHoldStatus() {
         // Given
         var seatHold = SeatHold.builder()
-                .id(10L)
+                .id(100L)
                 .status(SeatHoldStatus.EXPIRED)
                 .build();
 
-        when(seatHoldRepository.findById(10L)).thenReturn(Optional.of(seatHold));
+        when(seatHoldRepository.findById(100L)).thenReturn(Optional.of(seatHold));
 
         // When / Then
-        assertThatThrownBy(() -> service.expire(10L))
+        assertThatThrownBy(() -> service.expire(100L))
                 .isInstanceOf(IllegalStateException.class)
                 .hasMessageContaining("Only HOLD status can be expired");
 
-        verify(seatHoldRepository).findById(10L);
         verify(seatHoldRepository, never()).save(any());
     }
-
-    // ============= EXPIRE ALL TESTS =============
 
     @Test
     void shouldExpireAllExpiredHolds() {
         // Given
-        OffsetDateTime now = OffsetDateTime.now();
-
+        var now = OffsetDateTime.now();
         var hold1 = SeatHold.builder()
-                .id(10L)
+                .id(100L)
                 .status(SeatHoldStatus.HOLD)
                 .expiresAt(now.minusMinutes(5))
                 .build();
 
         var hold2 = SeatHold.builder()
-                .id(11L)
+                .id(101L)
                 .status(SeatHoldStatus.HOLD)
-                .expiresAt(now.minusMinutes(3))
+                .expiresAt(now.minusMinutes(2))
                 .build();
 
         when(seatHoldRepository.findByStatusAndExpiresAtBefore(eq(SeatHoldStatus.HOLD), any(OffsetDateTime.class)))
@@ -555,39 +384,7 @@ class SeatHoldServiceImplTest {
 
         // Then
         verify(seatHoldRepository).findByStatusAndExpiresAtBefore(eq(SeatHoldStatus.HOLD), any(OffsetDateTime.class));
-        verify(seatHoldRepository).saveAll(argThat(
-                (List<SeatHold> list) ->
-                        list != null &&
-                                list.size() == 2 &&
-                                list.stream().allMatch(sh -> sh.getStatus() == SeatHoldStatus.EXPIRED)
-        ));
-    }
-
-    @Test
-    void shouldNotSaveWhenNoExpiredHolds() {
-        // Given
-        when(seatHoldRepository.findByStatusAndExpiresAtBefore(eq(SeatHoldStatus.HOLD), any(OffsetDateTime.class)))
-                .thenReturn(List.of());
-
-        // When
-        service.expireAll();
-
-        // Then
-        verify(seatHoldRepository).findByStatusAndExpiresAtBefore(eq(SeatHoldStatus.HOLD), any(OffsetDateTime.class));
-        verify(seatHoldRepository, never()).saveAll(any());
-    }
-
-    @Test
-    void shouldNotExpireAlreadyExpiredHolds() {
-        // Given - La query solo devuelve HOLD con expiresAt anterior, nunca EXPIRED
-        when(seatHoldRepository.findByStatusAndExpiresAtBefore(eq(SeatHoldStatus.HOLD), any(OffsetDateTime.class)))
-                .thenReturn(List.of());
-
-        // When
-        service.expireAll();
-
-        // Then
-        verify(seatHoldRepository).findByStatusAndExpiresAtBefore(eq(SeatHoldStatus.HOLD), any(OffsetDateTime.class));
-        verify(seatHoldRepository, never()).saveAll(any());
+        verify(seatHoldRepository).saveAll(anyList());
     }
 }
+
